--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ master citest ]
   pull_request:
-    branches: [ master ]
+    branches: [ master citest ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
